<resources>
    <string name="app_name">M-Expense: Expense Management</string>
    <string name="app_desc">Help employees easily manage and record work related trip expenses.</string>
    <string name="trip_enter_details">Enter trip details</string>
    <string name="trip_details">View trip list</string>
    <string name="trip_delete_details">Delete all trips</string>
    <string name="trip_add_expenses">Enter trip expenses</string>

    <string name="selectBtn">Select Continent</string>
    <string name="saveBtn">Save Details</string>
    <string name="saveExpenseBtn">Save Expense</string>
    <string name="backBtn">Back</string>
    <string name="editBtn">Edit</string>
    <string name="updateBtn">Update</string>
    <string name="deleteBtn">Delete</string>
    <string name="continentDesc">Continent</string>
    <string name="searchView">Search trips</string>

    <string name="nameTrip">Trip name:</string>
    <string name="destination">Destination:</string>
    <string name="dateTrip">Trip date:</string>
    <string name="riskAssessment">Risk assessment:</string>
    <string name="description">Description:</string>
    <string name="peopleAttending">People attending:</string>
    <string name="transportation">Transportation:</string>

    <string name="expenseType">Expense type:</string>
    <string name="expenseAmount">Amount:</string>
    <string name="expenseDate">Date: </string>
    <string name="expenseDescription">Comments:</string>

    <string name="nameTripInput">Conference</string>
    <string name="destinationInput">Europe</string>
    <string name="dateTripInput">02/02/2023</string>
    <string name="riskAssessmentInput">Yes</string>
    <string name="descriptionInput">Long trip</string>
    <string name="peopleAttendingInput">20</string>
    <string name="transportationInput">Car</string>

    <string name="expenseTypeInput">Travel</string>
    <string name="expenseAmountInput">£50</string>
    <string name="expenseDateInput">02/04/2023</string>
    <string name="expenseDescriptionInput">Ran out of gas</string>

    <string name="nameTripInput1">tvNameTrip</string>
    <string name="destinationInput1">tvDestination</string>
    <string name="dateTripInput1">tvDateTrip</string>
    <string name="riskAssessmentInput1">tvRiskAssessment</string>
    <string name="descriptionInput1">tvDescription</string>
    <string name="peopleAttendingInput1">tvPeopleAttending</string>
    <string name="transportationInput1">tvTransportation</string>
</resources>