<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/backBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addExpenseBtn"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addExpenseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="updateDetails"
        android:text="@string/saveExpenseBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:orientation="vertical"
        android:paddingVertical="100sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/expenseType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/expenseType"
            android:textSize="20sp"
            android:minHeight="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/expenseAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/expenseAmount"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/expenseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/expenseDate"
            android:textSize="20sp"
            android:minHeight="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/expenseDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/expenseDescription"
            android:textSize="20sp"
            android:minHeight="48dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

        <EditText
            android:id="@+id/expenseTypeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/expenseTypeInput"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.431"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/expenseAmountInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/expenseAmountInput"
            android:inputType="number"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/expenseDateInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:autofillHints="dob"
            android:ems="10"
            android:hint="@string/expenseDateInput"
            android:inputType="date"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/expenseDescriptionInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:autofillHints="text"
            android:ems="10"
            android:hint="@string/expenseDescriptionInput"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="14sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>