<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="5dp"
        android:background="@color/grey">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginStart="12sp"
            android:fontFamily="sans-serif"
            android:text="@string/app_desc"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginStart="-360dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_box"
        android:orientation="horizontal">

        <Button
            android:id="@+id/enterTripDetailsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:stateListAnimator="@null"
            android:text="@string/trip_enter_details"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginStart="-320dp"
        android:layout_marginTop="230dp"
        android:background="@drawable/rounded_box"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tripDetailsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:stateListAnimator="@null"
            android:text="@string/trip_details"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginStart="-320dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/rounded_box"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteAllDetailsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:stateListAnimator="@null"
            android:text="@string/trip_delete_details"
            android:textColor="#000000" />
    </LinearLayout>
</LinearLayout>

